Modifications to Kanto
*Rearranged sections
*Placed pokemon in respective sections
*Corrected NidoranM/F

--- a/Pokemon Safari/html/zone.html
+++ b/Pokemon Safari/html/zone.html
@@ -20,14 +20,49 @@
 	<div class="title">
 			Kanto Region
 	</div>
-	<div id="forest" class="button forest">
+	
+	<div id="vforest" class="button vforest">
 		<span>Viridian Forest</span>
 	</div>
-	<div id="tunnel" class="button tunnel">
-		<span>Taupe Tunnel</span>
-			</div>
-	<div id="beach" class="button beach">
-		<span>Burnt-Sienna Beach</span>
+	
+	<div id="mtmoon" class="button mtmoon">
+		<span>Mt. Moon</span>
+	</div>
+	
+	<div id="rtunnel" class="button rtunnel">
+		<span>Rock Tunnel</span>
+	</div>
+	
+	<div id="digcave" class="button digcave">
+		<span>Digletts Cave</span>
+	</div>
+	
+	<div id="kszone" class="button kszone">
+		<span>Safari Zone</span>
+	</div>
+	
+	<div id="pwrplnt" class="button pwrplnt">
+		<span>Power Plant</span>
+	</div>
+	
+	<div id="sfisle" class="button sfisle">
+		<span>Seafoam Islands</span>
+	</div>
+	
+	<div id="pkmnmnsn" class="button pkmnmnsn">
+		<span>Pokemon Mansion</span>
+	</div>
+	
+	<div id="kvroad" class="button kvroad">
+		<span>Victory Road</span>
+	</div>
+	
+	<div id="ccave" class="button ccave">
+		<span>Cerulean Cave</span>
+	</div>
+	
+	<div id="fish" class="button fish">
+		<span>Fishing</span>
 	</div>
 </div>
 </body>
