--- a/Pokemon Safari/html/options.html
+++ b/Pokemon Safari/html/options.html
@@ -20,9 +20,9 @@
       <span class="optionText">Encounter Frequency:</span><br>
       <select id="frequency">
         <option value="common">Common (~1 min)</option>
-        <option value="uncommon">Uncommon (~10 min)</option>
-        <option value="rare">Rare (~45min)</option>
-        <option value="veryrare">Very Rare (~4 hours)</option>
+        <option value="uncommon">Uncommon (~2 mins)</option>
+        <option value="rare">Rare (~5mins)</option>
+        <option value="veryrare">Very Rare (~10 mins)</option>
         <option value="random">Random</option>
       </select><br>
 
